tests/baselines/reference/lambdaArgCrash.errors.txt
lambdaArgCrash.ts(27,25): error TS2095: Could not find symbol 'ItemSet'.
lambdaArgCrash.ts(29,10): error TS2082: Supplied parameters do not match any signature of call target:
	Call signatures of types '(items: any) => void' and '() => any' are incompatible:
		Call signature expects 0 or fewer parameters.
lambdaArgCrash.ts(29,10): error TS2087: Could not select overload for 'call' expression.
